Update author credit to FatLab Web Support
Changed author from 'Shane Larrabee' to 'FatLab Web Support' in:
- fatlabschema.php plugin header
- readme.txt credits
- README.md (header, copyright, credits)
- DEV-README.md
- .wordpress-org-submission-checklist.md

Author URI remains https://fatlabwebsupport.com (correct)
WordPress.org contributor remains 'fatlabllc' (correct)

--- a/.wordpress-org-submission-checklist.md
+++ b/.wordpress-org-submission-checklist.md
@@ -3,7 +3,7 @@
 ## ✅ Completed Fixes (Ready for Submission)
 
 ### 1. Author & Branding Updates
-- [x] Updated plugin header author to "Shane Larrabee"
+- [x] Updated plugin header author to "FatLab Web Support"
 - [x] Updated Author URI to https://fatlabwebsupport.com
 - [x] Updated Plugin URI to https://fatlabwebsupport.com/schema-wizard
 - [x] Updated readme.txt contributor to "fatlabllc"
@@ -168,4 +168,4 @@ Be prepared to explain:
 
 **Generated**: 2025-11-12
 **Status**: ✅ Ready for WordPress.org submission
-**Prepared by**: Shane Larrabee, FatLab Web Support
+**Prepared by**: FatLab Web Support
